# CS4LLM

./: .gitignore  00_CS_Undergrad_Standard.md  ASSESSMENT.md  BASELINE_QUESTIONNAIRE.html  BASELINE_QUESTIONNAIRE.md  COURSE_PROGRESS.json  CS_CORE_BILINGUAL_GLOSSARY.md  CS_CORE_TREE.md  GOAL.md  KNOWLEDGE_MAP.md  LEARNING_PROGRESS.html  LEARNING_ROUTE.md  MATH_MAP.md  MATH_ROUTE.md  README.md  ROADMAP.md  WORKSPACE.md
00-Archive-Early-Experiments/: 100k_Project_Proposals.md
00-Archive-Early-Experiments/00-Playground/: 01_crash_course.c  02_linked_list.c  03_assembly_demo.c  04_macro_structure_of_c.md  05_Yao_Class_Curriculum.md  05_reverse_linked_list.c  06_fork_demo.c
00-Archive-Early-Experiments/01_Core_Systems/: 01_Process_and_Memory_DeepDive.md
00-Archive-Early-Experiments/02-Compilers/: 01_Compiler_Architecture.md  01_lexer.c  02_Compiler_Core_Components.md  03_AST_Grammar_Rules.md  04_Recursive_Descent_Ssr.md
00-Archive-Early-Experiments/03-Networking/: 01_tiny_web_server.c
00-Archive-Early-Experiments/04-ProbLang/: 00_Architecture_Feasibility_Study.md  01_Turing_Completeness_and_Determinism.md  CMakeLists.txt  README.md
00-Archive-Early-Experiments/04-ProbLang/src/: 01_poc_quantum_myth.cpp
00-Archive-Early-Experiments/05-ProbLang-Rust/: 00_PhD_Level_Critique.md  01_Probabilistic_Axioms.md  02_First_Principles.md  Cargo.toml  (+1 more)
07-Stanford-CS144-Sponge/: README.md  README_DOCKER_SETUP.md
10-Stanford-CS143-Compiler/: README.md  README_DOCKER_SETUP.md
scripts/: course-progress.py  repo-status.sh
visualizations/: bfs-dfs-animation.html
(+45 files in other folders)
